{
    "name": "InputMaster",
    "maps": [
        {
            "name": "PlayerInputMap",
            "id": "8db70586-fbe8-4ab5-a539-ec83e759436f",
            "actions": [
                {
                    "name": "AbilityConfirmOrAttack",
                    "type": "Button",
                    "id": "e5b930d1-100b-4387-a2f4-7efaae6f8b92",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AbilityOne",
                    "type": "Button",
                    "id": "a27428ea-8bcd-4944-afae-d43a55652f8a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AbilityTwo",
                    "type": "Button",
                    "id": "a5e32590-9de8-4bdb-ac05-f1ebcf0db6dd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AbilityThree",
                    "type": "Button",
                    "id": "afea9987-8265-4034-bb18-f073653fbb21",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AbilityFour",
                    "type": "Button",
                    "id": "a2ae270f-cdab-4130-9bf9-2c78fa2155f5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "a27d4a25-aad1-485e-a1d8-e91e2bced71e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1a882592-43d7-468f-950f-36ca9a08bdac",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "AbilityConfirmOrAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "229da70d-5dc9-46ae-978f-245f70d861ae",
                    "path": "<Keyboard>/a",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "PC",
                    "action": "AbilityOne",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ba5aef29-e964-40a8-8ff2-5772717e2f0f",
                    "path": "<Keyboard>/s",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "PC",
                    "action": "AbilityTwo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "472cdf9e-efef-49f3-8e14-23a8e676bb4f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "AbilityThree",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4eb9afa7-6a01-4ef8-b565-7645f1b3fcd0",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "AbilityFour",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "010ff338-453e-404c-9e73-589c626b452e",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "PC",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}